updated html files

--- a/tomas_resendiz_app/templates/index.html
+++ b/tomas_resendiz_app/templates/index.html
@@ -201,7 +201,7 @@
           </div>
           <div class="col-md-3 profile-pic text-center"><a href="http://www.dailytoreador.com/lavida/grad-student-excels-on-campus-abroad/article_53fbe8b6-3239-11e0-872e-0017a4a78c22.html">
             <div class="img-box">
-            <img src="static/image/Korea.jpg" alt="Korea University Magazine Cover" class="responsive">
+            <img src="static/image/korea.jpg" alt="Korea University Magazine Cover" class="responsive">
               <h2>Korea University</h2></a>
               <p style="font-style: italic;">Seoul, South Korea</p> 
               <h3>Degree: Study Abroad Program<br>
