--- a/tomas_resendiz_app/templates/resume.html
+++ b/tomas_resendiz_app/templates/resume.html
@@ -13,7 +13,7 @@
 <div class="wrapper">
     <div class="resume">
         <div class="profile_info">
-            <div class="profile_img"><a href="/index">
+            <div class="profile_img"><a href="/">
                 <img src="static/image/res_image.jpg" alt="picture of Tomas Resendiz"></a>
             </div>
             <div class="profile_data">
