--- a/tomas_resendiz_app/templates/index.html
+++ b/tomas_resendiz_app/templates/index.html
@@ -127,6 +127,7 @@
             Strong research professional with a Master of Arts - MA focused in Agribusiness from Texas Tech University. 
             </p>
             <a href="resume"><button type="button" class="btn btn-primary">Resume</button></a>
+            <a href="static/image/resume.pdf" download><button type="button" class="btn btn-primary">PDF Resume</button></a>
           </div>
         </div>
       </div>
@@ -249,16 +250,17 @@
             <div class="follow"><b>Address:</b> <i class="fas fa-map-marker-alt"></i> Austin, Texas</div>
             <div class="follow"><b>Phone:</b> <i class="fas fa-phone"></i> (806) 983-9070</div>
             <div class="follow"><b>Email:</b> <i class="fas fa-envelope"></i> tomas.resendiz@icloud.com</div>
-            </div>
+           </div>
           </div>
         </div>
       </div>
-    </section>
+    </section><!-- end of contact -->
+    <!-- footer -->
     <section id="footer">
       <div class="container text-center">
         <p>Tomas Resendiz</p>
       </div>
-    </section>
+    </section><!-- end of footer -->
 
     <!-- bootstrap js files -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
