--- a/tomas_resendiz_app/templates/index.html
+++ b/tomas_resendiz_app/templates/index.html
@@ -125,6 +125,9 @@
             Experienced Statistician with a demonstrated history of working both in public and private sectors.  
             Skilled in Python (Programming Language), Visual Basic for Applications (VBA), Microsoft Excel, Data Analysis, and International Development. 
             Strong research professional with a Master of Arts - MA focused in Agribusiness from Texas Tech University. 
+
+            Experience with Machine Learning, Data Analysis, Interpreting Results, Experiment Design, Extract Data Sets from Databases, Report Data, and Querying.
+            For more information feel free to contact me.  
             </p>
             <a href="resume"><button type="button" class="btn btn-primary">Resume</button></a>
             <a href="static/image/resume.pdf" download><button type="button" class="btn btn-primary">PDF Resume</button></a>
